updating file types

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- TB purchase process -->
       <article class="slide">
         <a class="progressive img" href="portfolio/ticketbiscuit.html" title="check out my TicketBiscuit case study">
-          <img class="lowres" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/thumb/purchase-process.png">
+          <img class="lowres" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/thumb/purchase-process.jpg">
           <img class="overlay" src="" alt="purchase process design development">
         </a>
         <div class="details">
@@ -57,7 +57,7 @@
       <!-- Transcend -->
       <article class="right slide">
         <a class="progressive img" href="portfolio/transcend.html" title="check out my Transcend case study">
-          <img class="lowres" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/thumb/transcend.png">
+          <img class="lowres" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/thumb/transcend.jpg">
           <img class="overlay" src="" alt="therapy website design development">
         </a>
         <div class="details">
@@ -70,7 +70,7 @@
       <!-- Tower -->
       <article class="slide">
         <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/thumb/tower.png">
+          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/thumb/tower.jpg">
           <img class="overlay" src="" alt="literary magazine design development">
         </div>
         <div class="details">
@@ -83,7 +83,7 @@
       <!-- Rojo Ad & Menus -->
       <article class="right slide">
         <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/thumb/rojo.png">
+          <img class="lowres" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/thumb/rojo.jpg">
           <img class="overlay" src="" alt="menu ad design development">
         </div>
         <div class="details">
@@ -96,14 +96,14 @@
       <!-- Central Research Associates -->
       <article class="slide">
         <div class="progressive img">
-          <img class="lowres" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/thumb/central-trials.png">
+          <img class="lowres" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/thumb/central-trials.jpg">
           <img class="overlay" src="" alt="wordpress custom theme design development">
         </div>
         <div class="details">
           <h3 class="red">custom wordpress theme</h3>
           <h6>Central Research Associates</h6>
-          <p>Central Research Associates came to me to set up a web presence. They had two goals that sometimes conflicted — provide information for patients looking to enroll in free trials as well as information for other research organizations and hospitals looking to partner with them. The challenge was to inform the latter without overwhelming the former with unnecessary information.</p>
-          <p>After we determined trial participants would be the primary audience, I accomplished this by placing a large, attention-grabbing call to action on the homepage that immediately whisks potential participants away to the page relevant to them. Others looking for more in-depth information can follow the links below that or use the navigation. I created icons to categorize their text-heavy pages, grouped like content under linked subheadings, and instituted cross-linking throughout all the informative pages.</p>
+          <p>Central Research Associates had two goals that sometimes conflicted — provide information for patients looking to enroll in free clinical trials as well as for other organizations and hospitals looking to partner with them. The challenge was to inform the latter without overwhelming the former.</p>
+          <p>After we determined trial participants would be the primary audience, I accomplished this by placing a large, attention-grabbing call to action on the homepage that immediately whisks potential participants away to the page relevant to them. I created icons to categorize their text-heavy pages, grouped like content under linked subheadings, and instituted cross-linking throughout all the informative pages.</p>
           <a href="http://www.centraltrials.com/" title="Central Research Associates site">visit the Central Research Associates site</a>
         </div>
       </article>
