--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -38,27 +38,55 @@
     </div>
     </header>
   <!-- content -->
-  <section id="content" class="width case">
-    <article class="overview">
+  <section id="content" class="width case animate fade">
+    <article class="overview text-center">
       <h2>purchase process redesign</h2>
       <h5>in-house designer &amp; developer at TicketBiscuit LLC</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>update design for better user experience, more attractive ui, stay up to date with competitors, reduce clicks</p>
     </article>
-    <article>
-      <h3 class="red">challenge</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <article class="banner">
+      <div class="progressive img">
+        <img class="lowres" src="../images/portfolio/purchase-process.jpg" data-image="../images/case-study/purchase-process.gif">
+        <img class="overlay" src="" alt="literary magazine design development">
+      </div>
     </article>
-    <article>
-      <h3 class="red">process</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <article class="slide">
+      <h3 class="red text-center">challenge</h3>
+      <p>The ticket-buying interface remained largely unchanged since the TicketBiscuit platform was developed about 15 years ago. Users had to click through anywhere from four to seven pages before completing their transaction. The UI &mdash; initially created by back-end developers &mdash; was largely table-based. I was tasked with simplifying this process and modernizing it in both form and function without losing any functionality or disorienting returning users.</p>
     </article>
-    <article>
-      <h3 class="red">solution</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <article id="process" class="slide">
+      <h3 class="red text-center">process</h3>
+      <section class="grid gutters">
+        <div class="cell l-third">
+          <h6>research</h6>
+          <div class="cell l-half grid">
+            <div class="cell m-half l-full"><img src="../images/case-study/research.jpg"/></div>
+            <p class="cell m-half l-full">The team shut ourselves in a conference room for a week and went through a condensed design sprint. We went over our current process, researched trends and competitors, and came up with extensive notes and sketches. We created personas representing various types of our users so we could address each of their needs as we made UI decisions.</p>
+          </div>
+        </div>
+        <div class="cell l-third">
+          <h6>prototype</h6>
+          <div class="cell l-half grid">
+            <div class="cell m-half l-full"><img src="../images/case-study/prototype.png"/></div>
+            <p class="cell m-half l-full">I created some rough grayscale wireframes to show the basic functionality. When we agreed on that, I then added color and iterated through hundreds of screens to nail down a design. I then used those to create detailed interactive prototypes for mobile and desktop to use for testing.</p>
+          </div>
+        </div>
+        <div class="cell l-third">
+          <h6>build</h6>
+          <div class="cell l-half grid">
+            <div class="cell m-half l-full"><img src="../images/case-study/build.png"/></div>
+            <p class="cell m-half l-full">Once the design was approved, I worked with back-end developers to bring it to life. I started by building styles and static HTML elements, which my coworker then replaced by dynamic C#. I also added scripts to enhance interactions: animating changes, using HTML5 input types, implementing front-end validation, and masking inputs such as credit card and phone numbers.</p>
+          </div>
+        </div>
+     </section>
     </article>
-    <article>
-      <h3 class="red">results</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <article class="slide">
+      <h3 class="red text-center">solution</h3>
+      <p>card based layout, mobile optimized, animated, required login</p>
+    </article>
+    <article class="slide">
+      <h3 class="red text-center">results</h3>
+      <p>Condensed 6 pages into 1, sub-minute purchase times for the first time since beginning, conversion rates up 30% (30.79 to be exact-ish, from 16.5 to 21.58 despite requiring login), reduce tech debt</p>
     </article>
   </section>
   <!-- footer -->
