--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -42,17 +42,21 @@
     <article class="overview text-center">
       <h2>purchase process redesign</h2>
       <h5>in-house designer &amp; developer at TicketBiscuit LLC</h5>
-      <p>update design for better user experience, more attractive ui, stay up to date with competitors, reduce clicks</p>
+      <p class="red">update design for better user experience, more attractive ui, stay up to date with competitors, reduce clicks</p>
     </article>
     <article class="banner">
       <div class="progressive img">
-        <img class="lowres" src="../images/portfolio/purchase-process.jpg" data-image="../images/case-study/purchase-process.gif">
-        <img class="overlay" src="" alt="literary magazine design development">
+        <img class="lowres" src="../images/portfolio/low-res/purchase-process.jpg" data-image="../images/portfolio/purchase-process.jpg">
+        <img class="overlay" src="" alt="purchase process redesign">
       </div>
     </article>
-    <article class="slide">
+    <article id="challenge" class="slide">
       <h3 class="red text-center">challenge</h3>
-      <p>The ticket-buying interface remained largely unchanged since the TicketBiscuit platform was developed about 15 years ago. Users had to click through anywhere from four to seven pages before completing their transaction. The UI &mdash; initially created by back-end developers &mdash; was largely table-based. I was tasked with simplifying this process and modernizing it in both form and function without losing any functionality or disorienting returning users.</p>
+      <section class="grid gutters text-center">
+        <div class="cell m-half"><img src="../images/case-study/legacy-1.png" width="346px" height="400px"/></div>
+        <div class="cell m-half"><img src="../images/case-study/legacy-2.png" width="346px" height="400px"/></div>
+      </section>
+      <p>The ticket-buying interface remained largely unchanged since the TicketBiscuit platform was developed about 15 years ago. Users had to click through anywhere from four to seven pages before completing their transaction. The UI was initially created by back-end developers and was largely table-based. I was tasked with simplifying this process and modernizing it in both form and function without losing any functionality or disorienting returning users.</p>
     </article>
     <article id="process" class="slide">
       <h3 class="red text-center">process</h3>
@@ -68,7 +72,7 @@
           <h6>prototype</h6>
           <div class="cell l-half grid">
             <div class="cell m-half l-full"><img src="../images/case-study/prototype.png"/></div>
-            <p class="cell m-half l-full">I created some rough grayscale wireframes to show the basic functionality. When we agreed on that, I then added color and iterated through hundreds of screens to nail down a design. I then used those to create detailed interactive prototypes for mobile and desktop to use for testing.</p>
+            <p class="cell m-half l-full">I created some rough grayscale wireframes to show the basic functionality. When we agreed on that, I added color and iterated through hundreds of screens to nail down a design. I then used those to create detailed interactive prototypes for mobile and desktop to use for testing.</p>
           </div>
         </div>
         <div class="cell l-third">
@@ -82,11 +86,32 @@
     </article>
     <article class="slide">
       <h3 class="red text-center">solution</h3>
-      <p>card based layout, mobile optimized, animated, required login</p>
+      <article class="banner">
+        <div class="progressive img gif">
+          <img class="lowres noblur" src="../images/portfolio/purchase-process.jpg" data-image="../images/case-study/purchase-process.gif">
+          <img class="overlay" src="" alt="purchase process redesign">
+        </div>
+      </article>
+      <p>I decided on a card-based layout to allow modernization of the UI while preserving the modular nature of the existing components. Each card is collapsible and displays a summary of its information when collapsed. Cards that need user input are automatically collapsed when going to checkout. This means returning users can get to the checkout page, review the information on their collapsed cards, and click pay in a matter of seconds.</p>
+      <p>I looked at our analytics to determine which browser versions we should support and what features could be integrated. Since about 55% of our users access the site via mobile device, I focused on mobile optimization. Since this page is form-heavy, I implemented changes to make filling out these forms easier. HTML5 input types trigger the correct keyboard on mobile devices, while input masking makes input data easier to scan. I applied input masking to the credit card number, expiration date, CCV code, phone number, and postal code as well as all required elements. Since we have some customers outside the US, phone number and postal code field validation patterns are dynamic based on country selected. The form supports validation for US, Canada, and the UK.</p>
+      <p>Back-end developers implemented my new total cost design that updates automatically based on decisions made in the checkout cards. I also made the ticket purchase timer more conspicuous so it didn't get lost on the page and created a new, separate cart page that can be accessed outside the purchase process. Since the screen can become very long on mobile, I made the pay button float near the bottom of the screen so it's always within reach. Lastly, I used some jQuery and CSS3 transitions to animate interactions for a smoother user experience.</p>
     </article>
-    <article class="slide">
+    <article id="results" class="slide">
       <h3 class="red text-center">results</h3>
-      <p>Condensed 6 pages into 1, sub-minute purchase times for the first time since beginning, conversion rates up 30% (30.79 to be exact-ish, from 16.5 to 21.58 despite requiring login), reduce tech debt</p>
+      <section class="grid gutters text-center stretch">
+        <div class="cell m-third">
+          <h1 class="teal">30.79%</h1>
+          <p>more than 30% increase in conversion rates, <span class="break"></span>from 16.5% to 21.58%</p>
+        </div>
+        <div class="cell m-third">
+          <h1 class="teal">6 pages</h1>
+          <p>six pages condensed into one, <span class="break"></span>reducing clicks and tech debt</p>
+        </div>
+        <div class="cell m-third">
+          <h1 class="teal">< 1 minute</h1>
+          <p>sub-minute purchase times for the first time <span class="break"></span>since the company began</p>
+        </div>
+      </section>
     </article>
   </section>
   <!-- footer -->
