update case study

--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -81,8 +81,8 @@
     <article id="solution" class="slide">
       <h3 class="red text-center">solution</h3>
       <div class="banner">
-        <div class="progressive img gif">
-          <img class="lowres noblur" src="../images/portfolio/purchase-process.jpg" data-image="../images/case-study/purchase-process.gif">
+        <div class="progressive img gif text-center">
+          <img class="lowres noblur" src="../images/case-study/purchase-process.png" data-image="../images/case-study/purchase-process.gif">
           <img class="overlay" src="" alt="purchase process redesign">
         </div>
       </div>
