update case study

--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -99,7 +99,7 @@
         </div>
         <div class="cell m-third">
           <h1 class="teal">6 pages</h1>
-          <p>six pages condensed into one, <span class="break"></span>reducing clicks and tech debt</p>
+          <p>maximum six pages condensed into one, <span class="break"></span>reducing clicks and tech debt</p>
         </div>
         <div class="cell m-third">
           <h1 class="teal">< 1 minute</h1>
