resume update and folder restructuring

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
   <!-- content -->
   <section id="content" class="width">
-    <h2>front-end development <span class="break">&amp; design</span></h2>
+    <h2 class="text-center">front-end development <span class="break">&amp; design</span></h2>
     <div class="portfolio animate fade">
       <!-- TB purchase process -->
       <article class="slide">
