--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -28,7 +28,7 @@
   <!-- header -->
   <header>
     <div class="width">
-      <h1><a href="#">Hannah Stein</a></h1>
+      <h1><a href="/">Hannah Stein</a></h1>
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
           <a href="/" title="portfolio" class="active">portfolio</a>
@@ -42,14 +42,14 @@
     <article class="overview text-center">
       <h2>purchase process redesign</h2>
       <h5>in-house designer &amp; developer at TicketBiscuit LLC</h5>
-      <img src="../images/case-study/mockup-small.png" height="600px" />
+      <img src="../images/case-study/ticketbiscuit/mockup-small.png" height="600px" />
     </article>
     <article id="challenge" class="slide">
       <h3 class="red text-center">challenge</h3>
       <p>The ticket-buying interface remained largely unchanged since the TicketBiscuit platform was developed about 15 years ago. Users had to click through anywhere from four to seven pages before completing their transaction. The UI was initially created by back-end developers and was largely table-based. I was tasked with simplifying this process and modernizing it in both form and function without losing any functionality or disorienting returning users.</p>
       <section class="grid gutters text-center">
-        <div class="cell m-half"><img src="../images/case-study/legacy-1.png" width="346px" height="400px"/></div>
-        <div class="cell m-half"><img src="../images/case-study/legacy-2.png" width="346px" height="400px"/></div>
+        <div class="cell m-half"><img src="../images/case-study/ticketbiscuit/legacy-1.png" width="346px" height="400px"/></div>
+        <div class="cell m-half"><img src="../images/case-study/ticketbiscuit/legacy-2.png" width="346px" height="400px"/></div>
       </section>
     </article>
     <article id="process" class="slide">
@@ -58,21 +58,21 @@
         <div class="cell l-third">
           <h6>research</h6>
           <div class="cell l-half grid">
-            <div class="cell m-half l-full"><img src="../images/case-study/research.jpg"/></div>
+            <div class="cell m-half l-full"><img src="../images/case-study/ticketbiscuit/research.jpg"/></div>
             <p class="cell m-half l-full">The team shut ourselves in a conference room for a week and went through a condensed design sprint. We went over our current process, researched trends and competitors, and came up with extensive notes and sketches. We created personas representing various types of our users so we could address each of their needs as we made UI decisions.</p>
           </div>
         </div>
         <div class="cell l-third">
           <h6>prototype</h6>
           <div class="cell l-half grid">
-            <div class="cell m-half l-full"><img src="../images/case-study/prototype.png"/></div>
+            <div class="cell m-half l-full"><img src="../images/case-study/ticketbiscuit/prototype.png"/></div>
             <p class="cell m-half l-full">I created some rough grayscale wireframes to show the basic functionality. When we agreed on that, I added color and iterated through hundreds of screens to nail down a design. I then used those to create detailed interactive prototypes for mobile and desktop to use for testing.</p>
           </div>
         </div>
         <div class="cell l-third">
           <h6>build</h6>
           <div class="cell l-half grid">
-            <div class="cell m-half l-full"><img src="../images/case-study/build.png"/></div>
+            <div class="cell m-half l-full"><img src="../images/case-study/ticketbiscuit/build.png"/></div>
             <p class="cell m-half l-full">Once the design was approved, I worked with back-end developers to bring it to life. I started by building styles and static HTML elements, which my coworker then replaced by dynamic C#. I also added scripts to enhance interactions: animating changes, using HTML5 input types, implementing front-end validation, and masking inputs such as credit card and phone numbers.</p>
           </div>
         </div>
@@ -82,7 +82,7 @@
       <h3 class="red text-center">solution</h3>
       <div class="banner">
         <div class="progressive img gif text-center">
-          <img class="lowres noblur" src="../images/case-study/purchase-process.png" data-image="../images/case-study/purchase-process.gif">
+          <img class="lowres noblur" src="../images/case-study/ticketbiscuit/purchase-process.png" data-image="../images/case-study/ticketbiscuit/purchase-process.gif">
           <img class="overlay" src="" alt="purchase process redesign">
         </div>
       </div>
