--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -28,7 +28,7 @@
   <!-- header -->
   <header>
     <div class="width">
-      <h1><a href="#">Hannah Stein</a></h1>
+      <h1><a href="/">Hannah Stein</a></h1>
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
           <a href="/" title="portfolio" class="active">portfolio</a>
@@ -39,10 +39,10 @@
     </header>
   <!-- content -->
   <section id="content" class="width">
-    <article class="overview">
+    <article class="overview text-center">
       <h2>logo &amp; website designs</h2>
-      <h5>freelance designer for Transcend Family &amp; Individual Counseling</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h5>freelance designer for <a href="http://transcendcounseling.org/" target="_blank">Transcend Family &amp; Individual Counseling</a></h5>
+      <img src="../images/case-study/transcend/mockup-small.png" height="600px" />
     </article>
     <article>
       <h3 class="red">challenge</h3>
