--- a/404.html
+++ b/404.html
@@ -15,7 +15,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes">
   <!-- styles & images -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
-  <link href="css/lightbox.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -23,7 +22,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
-  <script src="js/lightbox.js"></script>
 </head>
 
 <body>
@@ -34,25 +32,23 @@
         <a class="mobile-nav" title="toggle menu"><span></span></a>
         <nav>
           <a href="/" title="portfolio">portfolio</a>
-          <a href="about.html" title="about">about</a>
-          <a href="contact.html" title="contact">contact</a>
+          <a href="about.html" title="about" class="active">about</a>
+          <a href="#contact" title="contact">contact</a>
         </nav>
     </div>
     </header>
-    <div class="clear"></div>
   <!-- content -->
   <section id="content" class="width center">
     <h1>Yikes!</h1>
     <p><a href="http://hannahsteindesigns.com">Something went wrong. Click to go home!</a></p>
   </section>
-
-  <div class="clear"></div>
   <!-- footer -->
-  <footer>
+  <!-- footer -->
+  <footer id="contact">
     <div class="width">
-      <h2>Let's talk.</h2>
       <section>
         <div class="social">
+          <h2>Let's talk.</h2>
           <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
             <img src="images/email.svg" width="24" />
             <span>hannahsteindesigns@gmail.com</span>
@@ -61,9 +57,13 @@
             <img src="images/linkedin.svg" width="24" />
             <span>linkedin.com/in/hannahsteindesigns</span>
           </a>
-          <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
+          <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
             <img src="images/behance.svg" width="24" />
             <span>behance.net/hannahsteindesigns</span>
+          </a> -->
+          <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
+            <img src="images/issuu.svg" width="24" />
+            <span>issuu.com/hannahsteindesigns</span>
           </a>
         </div>
         <div class="form">
@@ -87,33 +87,6 @@
       </section>
     </div>
   </footer>
-  <script>
-    $(document).ready(function(){
-      $(".mobile-nav").click(function(){
-        $(this).toggleClass("active");
-        $("nav").slideToggle()
-      });
-      $("#form").validate({
-        errorElement: "div",
-        errorPlacement: function(error, element) {
-          error.appendTo( element.parent("div") ).hide().fadeIn();
-        },
-        showErrors: function(errorMap, errorList) {
-          this.defaultShowErrors();
-          $.each(errorMap, function(key, value) {
-            var error = $("input[name='" + key + "']").nextAll("div");
-            if (error.text() !== value) {
-              error.hide().html(value).fadeIn();
-            }
-          });
-        }
-      });
-      $("input, textarea").change(function(){
-        var el = $(this);
-        el.val().trim().length ? el.addClass("focus") : el.removeClass("focus");
-      });
-    });
-  </script>
+  <script src="js/scripts.js"></script>
 </body>
-
 </html>
