removing behance from footer for now

--- a/about.html
+++ b/about.html
@@ -66,10 +66,10 @@
             <img src="images/linkedin.svg" width="24" />
             <span>linkedin.com/in/hannahsteindesigns</span>
           </a>
-          <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
+          <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
             <img src="images/behance.svg" width="24" />
             <span>behance.net/hannahsteindesigns</span>
-          </a>
+          </a> -->
           <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
             <img src="images/issuu.svg" width="24" />
             <span>issuu.com/hannahsteindesigns</span>
