--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <p>I'm a <span class="stress">front-end developer</span> and <span class="stress">designer</span>. I take projects from initial sketches through static wireframes and basic prototypes all the way to the live finished product.</p>
         <p>I work at <span class="stress">TicketBiscuit</span> in Birmigham, Alabama, where I create and update designs for both a public-facing <span class="nobreak">e-commerce</span> platform and a client-facing dashboard. I also design interfaces for our various branded mobile apps on iOS and Android.</p>
         <p>My roots are in print design, but these days almost everything is on the web &mdash; including my work. I'm increasingly passionate about <span class="stress">user experience</span> as the guiding principle for everything I create.</p>
-        <p><a href="images/Stein-resume.pdf" alt="Hannah's resume" target="_blank">Download my PDF résumé.</a></p>
+        <p><a href="images/Stein-resume.pdf" alt="Hannah's resume" target="_blank">Download my PDF resume.</a></p>
       </div>
       <aside>
         <img src="images/selfie-square.jpg" title="Hannah Stein" />
