--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -38,26 +38,26 @@
     </div>
     </header>
   <!-- content -->
-  <section id="content" class="width">
+  <section id="content" class="width case animate fade">
     <article class="overview text-center">
       <h2>logo &amp; website designs</h2>
       <h5>freelance designer for <a href="http://transcendcounseling.org/" target="_blank">Transcend Family &amp; Individual Counseling</a></h5>
       <img src="../images/case-study/transcend/mockup-small.png" height="600px" />
     </article>
-    <article>
-      <h3 class="red">challenge</h3>
+    <article id="challenge" class="slide">
+      <h3 class="red text-center">challenge</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </article>
-    <article>
-      <h3 class="red">process</h3>
+    <article id="process" class="slide">
+      <h3 class="red text-center">process</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </article>
-    <article>
-      <h3 class="red">solution</h3>
+    <article id="solution" class="slide">
+      <h3 class="red text-center">solution</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </article>
-    <article>
-      <h3 class="red">results</h3>
+    <article id="results" class="slide">
+      <h3 class="red text-center">results</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </article>
   </section>
