case study grid and font styles

--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -48,8 +48,9 @@
       <h3 class="red text-center">challenge</h3>
       <p>The ticket-buying interface remained largely unchanged since the TicketBiscuit platform was developed about 15 years ago. Users had to click through anywhere from four to seven pages before completing their transaction. The UI was initially created by back-end developers and was largely table-based. I was tasked with simplifying this process and modernizing it in both form and function without losing any functionality or disorienting returning users.</p>
       <section class="grid gutters text-center">
-        <div class="cell m-half"><img src="../images/case-study/ticketbiscuit/legacy-1.png" width="346px" height="400px"/></div>
-        <div class="cell m-half"><img src="../images/case-study/ticketbiscuit/legacy-2.png" width="346px" height="400px"/></div>
+        <div class="cell auto"><img src="../images/case-study/ticketbiscuit/legacy-1.png" width="346px" height="400px"/></div>
+        <div class="cell auto"><img src="../images/case-study/ticketbiscuit/legacy-2.png" width="346px" height="400px"/></div>
+        <p class="cell full note">examples of components before my update</p>
       </section>
     </article>
     <article id="process" class="slide">
