adding paging to case study pages

--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -107,6 +107,10 @@
         </div>
       </section>
     </article>
+    <article class="pager">
+      <a class="prev" href="" title=""></a>
+      <a class="next" href="transcend.html" title="Transcend case study">next case study ➞</a>
+    </article>
   </section>
   <!-- footer -->
   <footer id="contact">
