--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -60,6 +60,10 @@
       <h3 class="red text-center">results</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </article>
+    <article class="pager">
+      <a class="prev" href="ticketbiscuit.html" title="TicketBiscuit case study">← previous case study</a>
+      <a class="next" href="" title=""></a>
+    </article>
   </section>
   <!-- footer -->
   <footer id="contact">
