converting static icons to font

--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -14,6 +14,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes">
   <!-- styles & images -->
+  <script src="https://use.fontawesome.com/1d1e476666.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
   <link href="../css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
@@ -109,7 +110,7 @@
     </article>
     <article class="pager">
       <a class="prev" href="" title=""></a>
-      <a class="next" href="transcend.html" title="Transcend case study">next case study ➞</a>
+      <a class="next" href="transcend.html" title="Transcend case study">next case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
     </article>
   </section>
   <!-- footer -->
@@ -119,19 +120,35 @@
         <div class="social">
           <h2>Let's talk.</h2>
           <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
-            <img src="../images/email.svg" width="24" />
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+              <i class="fa fa-envelope fa-stack-1x" aria-hidden="true"></i>
+            </span>
             <span>hannahsteindesigns@gmail.com</span>
           </a>
           <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
-            <img src="../images/linkedin.svg" width="24" />
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+              <i class="fa fa-linkedin fa-stack-1x" aria-hidden="true"></i>
+            </span>
             <span>linkedin.com/in/hannahsteindesigns</span>
           </a>
           <!-- <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
-            <img src="../images/behance.svg" width="24" />
+            <img src="images/behance.svg" width="24" />
             <span>behance.net/hannahsteindesigns</span>
           </a> -->
+          <a href="https://github.com/hannahsteindesigns/" title="see my original files on github">
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+              <i class="fa fa-github fa-stack-1x" aria-hidden="true"></i>
+            </span>
+            <span>github.com/hannahsteindesigns</span>
+          </a>
           <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
-            <img src="../images/issuu.svg" width="24" />
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+              <i class="fa fa-briefcase fa-stack-1x" aria-hidden="true"></i>
+            </span>
             <span>issuu.com/hannahsteindesigns</span>
           </a>
         </div>
