--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -82,7 +82,7 @@
     <article id="solution" class="slide">
       <h3 class="red text-center">solution</h3>
       <div class="banner">
-        <video poster="../images/case-study/ticketbiscuit/purchase-process.png" muted autoplay controls>
+        <video poster="../images/case-study/ticketbiscuit/purchase-process.png" muted autoplay controls loop>
           <source src="../images/case-study/ticketbiscuit/purchase-process.mp4">
         </video>
       </div>
