--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -46,19 +46,68 @@
     </article>
     <article id="challenge" class="slide">
       <h3 class="red text-center">challenge</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Transcend was a new business so my client, Robyn, and I were starting from scratch. The company first needed a logo then a website to give potential clients some information about Robyn and her practice. She knew what colors she liked and had some general ideas about iconography, but as far as the look of the site, the project was fairly open-ended. Robyn knew what she didn't like but wasn't entirely sure what she wanted the site to look like.</p>
     </article>
     <article id="process" class="slide">
       <h3 class="red text-center">process</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <section class="grid gutters">
+        <div class="cell">
+          <h6>research</h6>
+          <p>I met with my client over coffee to look at examples and talk about her goals for the practice. We discussed her target demographic, the kind of client she wanted to attract, and the feelings she wanted her site to convey. She showed me examples of sites she didn't like, and I looked into competing websites to get an idea of the industry standard.</p>
+        </div>
+        <div class="cell m-half text-center">
+          <img class="contain" src="../images/case-study/transcend/logo-sketches.jpg" alt="initial sketches"/>
+        </div>
+        <div class="cell m-half">
+          <h6>logo design</h6>
+          <p>Robyn really liked the imagery of a lotus, fleur de lis, or water droplet. I did a lot of rough sketches playing with these concepts before ever touching the design on a computer. Then I created a few different logomarks and font combinations for Robyn to choose from. She mixed and matched elements from each, so I put those together and added color.</p>
+          <img class="contain" src="../images/case-study/transcend/logo-options.png" alt="logo options"/>
+        </div>
+        <div class="cell l-third">
+          <h6>mockup &amp; build</h6>
+          <p>Once she was happy with the logo design, I created a home page and subpage examples with dummy content for two different website designs. After Robyn picked the layout and design she liked, I worked from a boilerplate WordPress theme I created a while ago, customizing the layout and look to match the design and meet her needs. She needed to have a blog, a contact form, and the ability for potential patients to download paperwork.</p>
+          <p class="note text-center"><span class="l-show">(right)</span> final page designs:</p>
+        </div>
+        <div class="cell m-half l-third text-center">
+          <img class="contain" src="../images/case-study/transcend/frontpage.png" alt="site home page"/>
+        </div>
+        <div class="cell m-half l-third text-center">
+          <img class="contain" src="../images/case-study/transcend/subpage.png" alt="site content page"/>
+        </div>
+      </section>
     </article>
     <article id="solution" class="slide">
       <h3 class="red text-center">solution</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>In this project, I really had two users in mind: the potential patients on the front end and the user creating content on the back end. For users visiting the <a href="http://transcendcounseling.org/" target="_blank">Transcend counseling site</a>, I kept the most important information "above the fold" &mdash; a link to schedule appointments, a mission statement, and new client paperwork.</p>
+      <section class="grid">
+        <div class="cell m-full l-third text-center">
+          <img id="admin" class="contain" src="../images/case-study/transcend/login.png" alt="branded admin area" />
+          <p class="note">a branded login page also shows the vertical version of the final logo design</p>
+        </div>
+        <div class="cell m-full l-twothirds">
+          <p>I provided a contact page with a spam-free form but kept persistent contact information in the footer. Alongside the basic information and FAQ pages, Robyn has a blog with the ability to view posts by date or category tag. The front page can show either the most recent posts or any post marked as "featured" that she wants to pin to the front.</p>
+          <p class="text-center"><img class="contain" src="../images/case-study/transcend/palette.png" alt="custom color palette" /></p>
+          <p>I wanted to keep a consistent, personalized experience even on the user dashboard, for example branding the login page. To make sure the pages would be cohesive even after handing the site off to my client, I created reusable styles for blog posts and populated the WISYWIG editor with colors that correspond to the design. To help Robyn get a snapshot of her visitors, I set up Google analytics and integrated them with her WordPress dashboard for easy access.</p>
+        </div>
+        </section>
     </article>
     <article id="results" class="slide">
       <h3 class="red text-center">results</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Since this isn't an ecommerce site, the results are a little harder to quantify than some <a href="ticketbiscuit.html">previous projects</a>. The most important thing to me was that my client was happy with the finished product and felt comfortable creating and editing content. Robyn's calendar has been full since the site launched. Still, some numbers:</p>
+      <section class="grid gutters text-center stretch">
+        <div class="cell m-third">
+          <h1 class="teal">57.4%</h1>
+          <p>more than half of all users visit at least two pages on the site, with a bounce rate of 42.6%</p>
+        </div>
+        <div class="cell m-third">
+          <h1 class="teal">2.78 pages</h1>
+          <p>users are visiting an average of nearly <span class="break"></span>3 pages per session</p>
+        </div>
+        <div class="cell m-third">
+          <h1 class="teal">38.9%</h1>
+          <p>despite conversions occurring offline, more than a third of users return to the site at least once</p>
+        </div>
+      </section>
     </article>
     <article class="pager">
       <a class="prev" href="ticketbiscuit.html" title="TicketBiscuit case study"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> previous case study</a>
