about layout tweaks

--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
     </div>
     </header>
   <!-- content -->
-  <section id="content" class="width">
-    <h2>about me</h2>
-    <article class="about">
+  <section id="content" class="width about">
+    <h2 class="text-center">about me</h2>
+    <article class="bio">
       <div>
         <p>I'm a <span class="stress">front-end developer</span> and <span class="stress">designer</span>. I take projects from initial sketches through static wireframes and basic prototypes all the way to the live finished product.</p>
         <p>I work at <span class="stress">TicketBiscuit</span> in Birmigham, Alabama, where I create and update designs for both a public-facing <span class="nobreak">e-commerce</span> platform and a client-facing dashboard. I also design interfaces for our various branded mobile apps on iOS and Android.</p>
